--- a/Assignment4.ipynb
+++ b/Assignment4.ipynb
@@ -4,46 +4,142 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. Write a function to compute 5/0 and use try/except to catch the exceptions."
+    "### 1.Write a Python Program(with class concepts) to find the area of the triangle using the below formula.\n",
+    "###                 area = (s*(s-a)*(s-b)*(s-c)) *** 0.5\n",
+    "###  Function to take the length of the sides of triangle from user should be defined in the parent class and function to calculate the area should be defined in subclass."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def div():\n",
-    "    x = 5\n",
-    "    y = 0\n",
-    "    try :\n",
-    "        res = x/y\n",
-    "    except ZeroDivisionError as ze:\n",
-    "        print(ze, \"- value of y shouldn't be zero\")"
+    "class triangle():\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "    def get_sides(self):\n",
+    "        self.side1 = int(input(\"Enter side1 - \"))\n",
+    "        self.side2 = int(input(\"Enter side2 - \"))        \n",
+    "        self.side3 = int(input(\"Enter side3 - \"))   \n",
+    "    \n",
+    "class area(triangle):\n",
+    "    def __init__(self):\n",
+    "        self.get_sides()\n",
+    "    def area_of_triangle(self):\n",
+    "        a,b,c = self.side1,self.side2,self.side3\n",
+    "        s = (a+b+c)/2      #semi parameter\n",
+    "        area = (s*(s-a)*(s-b)*(s-c))**0.5\n",
+    "        return area "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "division by zero - value of y shouldn't be zero\n"
+      "Enter side1 - 3\n",
+      "Enter side2 - 4\n",
+      "Enter side3 - 5\n",
+      "Area of Triangle = 6.0\n"
      ]
     }
    ],
    "source": [
-    "div()"
+    "at = area()\n",
+    "print(f\"Area of Triangle = {at.area_of_triangle()}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. Implement a Python program to generate all sentences where subject is in[\"Americans\", \"Indians\"] and verb is in [\"Play\", \"watch\"] and the object is in [\"Baseball\",\"cricket\"]."
+    "### 2. Write a function filter_long_words() that takes a list of words and an integer n and returns the list of words that are longer than n."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def filter_long_words(ls_words,n):\n",
+    "    return list(filter(lambda x:len(x)>n,ls_words))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "words longer than 6 - ['Internshala', 'Linkedin', 'HackerRank']\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [\"GFG\",\"Internshala\",\"Linkedin\",\"HackerRank\"]\n",
+    "n=6\n",
+    "print(f\"words longer than {n} - {filter_long_words(l,n)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Write a Python program using function concept that maps list of words into a list of integers representing the lengths of the corresponding words."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def lenth_of_words(ls_words):\n",
+    "    return list(map(lambda x:len(x),ls_words))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "length of words in list - [3, 11, 8, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [\"GFG\",\"Internshala\",\"Linkedin\",\"HackerRank\"]\n",
+    "print(f\"length of words in list - {lenth_of_words(l)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. Write a Python function which takes a character (i.e. a string of length 1) and returns True if it is a vowel, False otherwise."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def vowel_check(char):\n",
+    "    return char in [\"a\",\"e\",\"i\",\"o\",\"u\"]"
    ]
   },
   {
@@ -52,25 +148,38 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Americans Play Baseball\n",
-      "Americans Play cricket\n",
-      "Americans watch Baseball\n",
-      "Americans watch cricket\n",
-      "Indians Play Baseball\n",
-      "Indians Play cricket\n",
-      "Indians watch Baseball\n",
-      "Indians watch cricket\n"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "for i in [\"Americans\", \"Indians\"] :\n",
-    "    for j in [\"Play\", \"watch\"]:\n",
-    "        for k in [\"Baseball\",\"cricket\"]:\n",
-    "            print(i,j,k)"
+    "vowel_check('e')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vowel_check('d')"
    ]
   },
   {
